--- a/1.1
+++ b/1.1
@@ -12,17 +12,23 @@ def scoring():  # ф-я для начисления очков за ф-ии - с
     return result
 
 
-@bot.message_handler(commands=['start'])
-def start(message):
+def standart_InlineKeyboard_Markup(message, symptoms_dict):
     markup = types.InlineKeyboardMarkup()
-    s_pain = types.InlineKeyboardButton('Боль', callback_data='pain')
-    s_female_discharge_alteration = types.InlineKeyboardButton('Изменение цвета выделений из половых органов',
-                                                               callback_data='female_discharge_alteration')
-    markup.row(s_pain, s_female_discharge_alteration)
-    s_rheum = types.InlineKeyboardButton('Насморк', callback_data='rheum')
-    s_contact_rush = types.InlineKeyboardButton('Контактная сыпь', callback_data='contact rush')
-    markup.row(s_rheum, s_contact_rush)
-    bot.send_message(message.chat.id, 'Выберите симптомы', reply_markup=markup)
+    counter_elem = 0
+    row_elem = []
+    for k, v in symptoms_dict.items():
+        k = types.InlineKeyboardButton(str(v), callback_data=str(v))
+        counter_elem += 1
+        row_elem.append(k)
+        if counter_elem % 2 == 0:
+            markup.row(*row_elem)
+            row_elem.clear()
+    bot.send_message(message.chat.id, 'Уточните симптоматику', reply_markup=markup)
+
+
+@bot.message_handler(commands=['start'])
+def start_survey(message):
+    standart_InlineKeyboard_Markup(message=message, symptoms_dict=primary_survey)
 
 
 @bot.callback_query_handler(func=lambda call: call.data == 'pain')
